kubetess/simple-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  labels:
    app: client
spec:
  containers:
  - name: client
    image: docker pull imsuriyapi/todo-app:v4
