kubetess/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      name: client-pods
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: imsuriyapi/todo-app:v4
---

apiVersion: v1
kind: Service
metadata:
  name: client-service
spec: 
  type: NodePort
  selector:
    app: client
  ports: 
    - port: 80
      targetPort: 80
      nodePort: 30001
