kubetess/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      name: mongo-pods
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec: 
  type: ClusterIP
  selector:
    app: mongo
  ports: 
    - port: 27017
      targetPort: 27017
